salesforce-krnl/force-app/main/default/objects/Document_Access_Log__c/Document_Access_Log__c.object-meta.xml
<CustomObject>
    <label>Document Access Log</label>
    <nameField>
        <displayFormat>DAL-{00000000}</displayFormat>
        <label>Access Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Access Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>