salesforce-krnl/force-app/main/default/objects/Document_Access_Log__c/fields/Access_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Access_Timestamp__c</fullName>
    <label>Access Timestamp</label>
    <type>DateTime</type>
</CustomField>