salesforce-krnl/force-app/main/default/objects/Document_Access_Log__c/fields/Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Type__c</fullName>
    <label>Access Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>View</fullName>
            </value>
            <value>
                <fullName>Download</fullName>
            </value>
            <value>
                <fullName>Modify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>