salesforce-krnl/force-app/main/default/objects/Document_Access_Log__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <label>Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>